--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <header id="top">
       <div class="first-line">
-        <h2>Hi, I my name is Luis</h2>
+        <h2>Luis Walderdorff</h2>
         <nav class="main-nav">
             <ul class="nav-list">
                 <li class="active"><a class="scroll" href="#top">Home</a></li>
@@ -24,10 +24,10 @@
       <div class="second-line">
         <img alt="Picture of me" src="images/profile-pic.jpeg" class="profile-pic" />
         <h1 class="title">Front-end web developer</h1>
+        <ul class="arrows">
+          <a class="scroll" href="#form-project"><span class="arrow-bottom"></span></a>
+        </ul>
       </div>
-      <ul class="arrows">
-        <a class="scroll" href="#main-content"><span class="arrow-bottom"></span></a>
-      </ul>
     </header>
 
     <main id="main-content">
@@ -38,58 +38,68 @@
 
       <div class="projects">
 
-        <div class="marketing-page">
-          <img  src="images/portfolio-1.png" alt="The front page of a marketing website." class="main-images"/>
-          <h2>Marketing Page</h2>
+        <div id="form-project">
+          <a href="luiswalderdorff.github.io/Techdegree-Project-3">
+            <img  src="images/Project-3.png" alt="A form project I made." class="project-images"/>
+          </a>
+          <h2>Form Project</h2>
           <p>
-            This project shows the front page of a marketing website meant for a specific business I'm interested in.
+            A simple online registration form I made.
           </p>
+          <ul class="arrows">
+            <a class="scroll" href="#gallery-project"><span class="arrow-bottom"></span></a>
+          </ul>
         </div>
 
-        <div class="search-age">
-          <img  src="images/portfolio-2.png" alt="My search project." class="main-images"/>
-          <h2>Search Page</h2>
+        <div id="gallery-project">
+          <img  src="images/Project-5.png" alt="A picture gallery" class="project-images"/>
+          <h2>Picture Gallery</h2>
           <p>
-            This project searches through a specific database to find information that the user is trying to look up.
+            A picture gallery with a JQuery lightbox and a JavaScript searchbar.
           </p>
+          <ul class="arrows">
+            <a class="scroll" href="#wheel-project"><span class="arrow-bottom"></span></a>
+          </ul>
         </div>
 
-        <div class="travel-app">
-          <img  src="images/portfolio-3.png" alt="My travel app." class="main-images"/>
-          <h2>Travel App</h2>
+        <div id="wheel-project">
+          <img  src="images/Project-6.png" alt="A wheel of success app" class="project-images"/>
+          <h2>Wheel of Success App</h2>
           <p>
-            This project compares travel times based on different transportation methods and tells you the best one.
+            A browser version of the word guessing game "Wheel of Success", using JavaScript.
           </p>
+          <ul class="arrows">
+            <a class="scroll" href="#dashboard-project"><span class="arrow-bottom"></span></a>
+          </ul>
         </div>
 
-        <div class="favorite-spots">
-          <img  src="images/portfolio-4.png" alt="My mapping project." class="main-images"/>
-          <h2>Map of Favorite Spots</h2>
+        <div id="dashboard-project">
+          <img  src="images/Project-7.png" alt="A webapp dashboard" class="project-images"/>
+          <h2>WebApp Dashboard</h2>
           <p>
-            This project uses mapping apis to plot points for my favorite spots in the city for a do-it-yourself walking tour.
+            A interactive dashboard for a web application, using SVG graphics and JavaScript programming.
           </p>
+          <ul class="arrows">
+            <a class="scroll" href="#api-project"><span class="arrow-bottom"></span></a>
+          </ul>
         </div>
 
-        <div class="photo-gallery">
-          <img  src="images/portfolio-5.png" alt="My photo gallery project." class="main-images"/>
-          <h2>Photo Gallery</h2>
+        <div id="api-project">
+          <img  src="images/Project-8.png" alt="A Employee directory, pulling information from an API" class="main-images"/>
+          <h2>Employee Directory</h2>
           <p>
-            This project shows pictures from a recent trip to the viewer and allows them to easily navigate through photos.
+            A Employee Directory, which uses JavaScript to pull its information from a third-party API.
           </p>
+          <ul class="arrows">
+            <a class="scroll" href="#coming-soon"><span class="arrow-bottom"></span></a>
+          </ul>
         </div>
 
-        <div class="calculator">
-          <img  src="images/portfolio-6.png" alt="My calculator project." class="main-images"/>
-          <h2>Photo Gallery</h2>
-          <p>
-            Someone can enter in the numbers that they want, and press the big blue button and get a result.
-          </p>
-        </div>
 
-        <div id="future-projects">
-          <h2>Future Projects</h2>
+        <div id="coming-soon">
+          <h2>Coming Soon...</h2>
           <p>
-            I am planning on programming a little arcade game. I'm still working out the details.
+           Add text...
           </p>
         </div>
       </div>
@@ -100,14 +110,14 @@
       <div class="upper-footer">
       <h2 id="contact">Contact</h2>
         <p>
-          If you're interested in chatting or want more information about what I've been working on, I'd love to hear from you!
+          Add text...
         </p>
-        <p><b>Phone</b>   +1 (111) 555-1234</p>
-        <p><b>Email</b>   email@yoursite.com</p>
+        <p><b>Phone</b>   +49 152 33502901</p>
+        <p><b>Email</b>   walderdorff.luis@gmail.com</p>
       </div>
       <div class="bottom-footer">
         <p id="LW"><b>Luis Walderdorff</b></p>
-        <p id="btt"><b><a href="#name">BACK TO TOP</a></b></p>
+        <p id="btt"><b><a href="#top">BACK TO TOP</a></b></p>
       </div>
     </footer>
     </div>
