Basic design für die breakpoints fertig

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <header id="top">
       <div class="first-line">
-        <h2>Luis Walderdorff</h2>
+        <h2 class="name">Luis Walderdorff</h2>
         <nav class="main-nav">
             <ul class="nav-list">
                 <li class="active"><a class="scroll" href="#top">Home</a></li>
@@ -23,7 +23,9 @@
       </div>
       <div class="second-line">
         <img alt="Picture of me" src="images/profile-pic.jpeg" class="profile-pic" />
-        <h1 class="title">Front-end web developer</h1>
+        <p>
+          Text about myself...
+        </p>
         <ul class="arrows">
           <a class="scroll" href="#form-project"><span class="arrow-bottom"></span></a>
         </ul>
@@ -52,7 +54,9 @@
         </div>
 
         <div id="gallery-project">
-          <img  src="images/Project-5.png" alt="A picture gallery" class="project-images"/>
+          <a href="luiswalderdorff.github.io/Techdegree-Project-5">
+            <img  src="images/Project-5.png" alt="A picture gallery" class="project-images"/>
+          </a>
           <h2>Picture Gallery</h2>
           <p>
             A picture gallery with a JQuery lightbox and a JavaScript searchbar.
@@ -63,7 +67,9 @@
         </div>
 
         <div id="wheel-project">
-          <img  src="images/Project-6.png" alt="A wheel of success app" class="project-images"/>
+          <a href="luiswalderdorff.github.io/Techdegree-Project-6">
+            <img  src="images/Project-6.png" alt="A wheel of success app" class="project-images"/>
+          </a>
           <h2>Wheel of Success App</h2>
           <p>
             A browser version of the word guessing game "Wheel of Success", using JavaScript.
@@ -74,7 +80,9 @@
         </div>
 
         <div id="dashboard-project">
-          <img  src="images/Project-7.png" alt="A webapp dashboard" class="project-images"/>
+          <a href="luiswalderdorff.github.io/Techdegree-Project-7">
+            <img  src="images/Project-7.png" alt="A webapp dashboard" class="project-images"/>
+          </a>
           <h2>WebApp Dashboard</h2>
           <p>
             A interactive dashboard for a web application, using SVG graphics and JavaScript programming.
@@ -85,7 +93,9 @@
         </div>
 
         <div id="api-project">
-          <img  src="images/Project-8.png" alt="A Employee directory, pulling information from an API" class="main-images"/>
+          <a href="luiswalderdorff.github.io/Techdegree-Project-3">
+            <img  src="images/Project-8.png" alt="A Employee directory, pulling information from an API" class="main-images"/>
+          </a>
           <h2>Employee Directory</h2>
           <p>
             A Employee Directory, which uses JavaScript to pull its information from a third-party API.
