Design mit Sofia angepasst

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/styles.css">
-    <link href="https://fonts.googleapis.com/css?family=Old+Standard+TT:400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
   </head>
   <body>
     <header id="top">
@@ -24,10 +24,13 @@
       <div class="second-line">
         <img alt="Picture of me" src="images/profile-pic.jpeg" class="profile-pic" />
         <p>
-          Text about myself...
+          Hi! My name is Luis and I'm a front-end developer, who recently finished a degree
+          in front-end web development at Treehouse. I study Cultural Anthropology at the
+          Goethe University in Frankfurt and learn how to code in my free time. My skills
+          right now include: HTML5, CSS, SASS, JavaScript and JQuery.
         </p>
         <ul class="arrows">
-          <a class="scroll" href="#form-project"><span class="arrow-bottom"></span></a>
+          <a class="scroll" href="#main-content"><span class="arrow-bottom"></span></a>
         </ul>
       </div>
     </header>
@@ -41,10 +44,10 @@
       <div class="projects">
 
         <div id="form-project">
-          <a href="luiswalderdorff.github.io/Techdegree-Project-3">
+          <a href="https://luiswalderdorff.github.io/Techdegree-Project-3"  target="_blank">
             <img  src="images/Project-3.png" alt="A form project I made." class="project-images"/>
           </a>
-          <h2>Form Project</h2>
+          <p><strong>Form Project</strong></p>
           <p>
             A simple online registration form I made.
           </p>
@@ -54,10 +57,10 @@
         </div>
 
         <div id="gallery-project">
-          <a href="luiswalderdorff.github.io/Techdegree-Project-5">
+          <a href="https://luiswalderdorff.github.io/Techdegree-Project-5"  target="_blank">
             <img  src="images/Project-5.png" alt="A picture gallery" class="project-images"/>
           </a>
-          <h2>Picture Gallery</h2>
+          <p><strong>Picture Gallery</strong></p>
           <p>
             A picture gallery with a JQuery lightbox and a JavaScript searchbar.
           </p>
@@ -67,10 +70,10 @@
         </div>
 
         <div id="wheel-project">
-          <a href="luiswalderdorff.github.io/Techdegree-Project-6">
+          <a href="https://luiswalderdorff.github.io/Techdegree-Project-6"  target="_blank">
             <img  src="images/Project-6.png" alt="A wheel of success app" class="project-images"/>
           </a>
-          <h2>Wheel of Success App</h2>
+          <p><strong>Wheel of Success App</strong></p>
           <p>
             A browser version of the word guessing game "Wheel of Success", using JavaScript.
           </p>
@@ -80,10 +83,10 @@
         </div>
 
         <div id="dashboard-project">
-          <a href="luiswalderdorff.github.io/Techdegree-Project-7">
+          <a href="https://luiswalderdorff.github.io/Techdegree-Project-7"  target="_blank">
             <img  src="images/Project-7.png" alt="A webapp dashboard" class="project-images"/>
           </a>
-          <h2>WebApp Dashboard</h2>
+          <p><strong>Webapp Dashboard</strong></p>
           <p>
             A interactive dashboard for a web application, using SVG graphics and JavaScript programming.
           </p>
@@ -93,10 +96,10 @@
         </div>
 
         <div id="api-project">
-          <a href="luiswalderdorff.github.io/Techdegree-Project-3">
+          <a href="https://luiswalderdorff.github.io/Techdegree-Project-8"  target="_blank">
             <img  src="images/Project-8.png" alt="A Employee directory, pulling information from an API" class="main-images"/>
           </a>
-          <h2>Employee Directory</h2>
+          <p><strong>Employee Directory</strong></p>
           <p>
             A Employee Directory, which uses JavaScript to pull its information from a third-party API.
           </p>
@@ -120,14 +123,13 @@
       <div class="upper-footer">
       <h2 id="contact">Contact</h2>
         <p>
-          Add text...
+          If you have any questions, feel free to contact me!
         </p>
-        <p><b>Phone</b>   +49 152 33502901</p>
         <p><b>Email</b>   walderdorff.luis@gmail.com</p>
       </div>
       <div class="bottom-footer">
         <p id="LW"><b>Luis Walderdorff</b></p>
-        <p id="btt"><b><a href="#top">BACK TO TOP</a></b></p>
+        <p id="btt"><b><a href="#top" class="scroll">BACK TO TOP</a></b></p>
       </div>
     </footer>
     </div>
