project-image class zum letzten Bild hinzugefügt

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
         <div id="api-project">
           <a href="https://luiswalderdorff.github.io/Techdegree-Project-8"  target="_blank">
-            <img  src="images/Project-8.png" alt="A Employee directory, pulling information from an API" class="main-images"/>
+            <img  src="images/Project-8.png" alt="A Employee directory, pulling information from an API" class="project-images"/>
           </a>
           <p><strong>Employee Directory</strong></p>
           <p>
