added fullstack project

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           </a>
           <p><strong>Wheel of Success App</strong></p>
           <p>
-            A browser version of the word guessing game "Wheel of Success", using JavaScript.
+            A browser version of the word guessing game "Wheel of Success", using JavaScript (CSS provided).
           </p>
           <div class="arrows">
             <a class="scroll" href="#dashboard-project"><span class="arrow-bottom"></span></a>
@@ -105,6 +105,20 @@
           <p><strong>Employee Directory</strong></p>
           <p>
             A Employee Directory, which uses JavaScript to pull its information from a third-party API and has lightboxes, for more detailed information.
+          </p>
+          <div class="arrows">
+            <a class="scroll" href="#coming-soon"><span class="arrow-bottom"></span></a>
+          </div>
+        </div>
+
+        <div id="fullstack-project">
+          <a href="https://full-stack-react-rest-api.herokuapp.com/"  target="_blank">
+            <img  src="images/Full-Stack-Project.png" alt="" class="project-images"/>
+          </a>
+          <p><strong>Full Stack School Database App with React and REST API</strong></p>
+          <p>
+            A app in which you can sign up and create courses. Every account is only able to update and delete their own courses. The 
+            REST Api was written in express and the frontend was created with react. You can create an account and try it out youself! You don't need to use a real email address when signing up, it just needs to look like an email address (CSS provided).
           </p>
           <div class="arrows">
             <a class="scroll" href="#coming-soon"><span class="arrow-bottom"></span></a>
