added altt ext for full stack project

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
         <div id="fullstack-project">
           <a href="https://full-stack-react-rest-api.herokuapp.com/"  target="_blank">
-            <img  src="images/Full-Stack-Project.png" alt="" class="project-images"/>
+            <img  src="images/Full-Stack-Project.png" alt="A Full Stack School Database App with React and a REST API<" class="project-images"/>
           </a>
           <p><strong>Full Stack School Database App with React and REST API</strong></p>
           <p>
