fixed scroll arrow

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             A Employee Directory, which uses JavaScript to pull its information from a third-party API and has lightboxes, for more detailed information.
           </p>
           <div class="arrows">
-            <a class="scroll" href="#coming-soon"><span class="arrow-bottom"></span></a>
+            <a class="scroll" href="#fullstack-project"><span class="arrow-bottom"></span></a>
           </div>
         </div>
 
