Rewrote introductions, added links to certificates and spell checked

--- a/index.html
+++ b/index.html
@@ -22,10 +22,12 @@
       </div>
       <div class="second-line">
         <p>
-          Hi! My name is Luis and I'm a front-end developer, who recently finished a degree
-          in front-end web development at Treehouse. I study Cultural Anthropology at the
-          Goethe University in Frankfurt and learn how to code in my free time. My skills
-          right now include: HTML5, CSS, SASS, JavaScript and JQuery.
+          Hi everyone, my name is Luis and I'm a full-stack developer. I have Techdegrees for 
+          <a href="https://www.credential.net/08u49tvo" target="_blank">Front End Web Development</a> 
+          and <a href="https://www.credential.net/adu3zzvv" target="_blank">Full Stack JavaScript</a> from <a href="https://teamtreehouse.com" target="_blank">Treehouse</a>. I studied Cultural 
+          Anthropology at the Goethe University in Frankfurt and learn how to code 
+          in my free time. My skills right now include: HTML5, CSS, JavaScript, Node, 
+          React, Express and SQL.
         </p>
         <img alt="Picture of me" src="images/profile-pic.jpeg" class="profile-pic" />
         <div class="arrows">
@@ -117,8 +119,8 @@
           </a>
           <p><strong>Full Stack School Database App with React and REST API</strong></p>
           <p>
-            A app in which you can sign up and create courses. Every account is only able to update and delete their own courses. The 
-            REST Api was written in express and the frontend was created with react. You can create an account and try it out youself! You don't need to use a real email address when signing up, it just needs to look like an email address (CSS provided).
+            An app in which you can sign up and create courses. Every account is only able to update and delete their own courses. The 
+            REST Api was written in express and the front end was created with react. You can create an account and try it out yourself! You don't need to use a real email address when signing up, it just needs to look like an email address (CSS provided).
           </p>
           <div class="arrows">
             <a class="scroll" href="#coming-soon"><span class="arrow-bottom"></span></a>
