fixed spelling errors

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           </a>
           <p><strong>Wheel of Success App</strong></p>
           <p>
-            A browser version of the word guessing game "Wheel of Success", using JavaScript (CSS provided).
+            A browser version of the word guessing game "Wheel of Success", using JavaScript (CSS was provided).
           </p>
           <div class="arrows">
             <a class="scroll" href="#dashboard-project"><span class="arrow-bottom"></span></a>
@@ -120,7 +120,7 @@
           <p><strong>Full Stack School Database App with React and REST API</strong></p>
           <p>
             An app in which you can sign up and create courses. Every account is only able to update and delete their own courses. The 
-            REST Api was written in express and the front end was created with react. You can create an account and try it out yourself! You don't need to use a real email address when signing up, it just needs to look like an email address (CSS provided).
+            REST-API was written in express and the front end was created with react. You can create an account and try it out yourself! You don't need to use a real email address when signing up, it just needs to look like an email address (CSS was provided).
           </p>
           <div class="arrows">
             <a class="scroll" href="#coming-soon"><span class="arrow-bottom"></span></a>
