added cookie warning

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
           <p><strong>Full Stack School Database App with React and REST API</strong></p>
           <p>
             An app in which you can sign up and create courses. Every account is only able to update and delete their own courses. The 
-            REST-API was written in express and the front end was created with react. You can create an account and try it out yourself! You don't need to use a real email address when signing up, it just needs to look like an email address (CSS was provided).
+            REST-API was written in express and the front end was created with react. You can create an account and try it out yourself! You don't need to use a real email address when signing up, it just needs to look like an email address (CSS was provided). This web page uses cookies.
           </p>
           <div class="arrows">
             <a class="scroll" href="#coming-soon"><span class="arrow-bottom"></span></a>
