changed sql to sqlite

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           and <a href="https://www.credential.net/adu3zzvv" target="_blank">Full Stack JavaScript</a> from <a href="https://teamtreehouse.com" target="_blank">Treehouse</a>. I studied Cultural 
           Anthropology at the Goethe University in Frankfurt and learn how to code 
           in my free time. My skills right now include: HTML5, CSS, JavaScript, Node, 
-          React, Express and SQL.
+          React, Express and SQLite.
         </p>
         <img alt="Picture of me" src="images/profile-pic.jpeg" class="profile-pic" />
         <div class="arrows">
