added smart-brain app

--- a/index.html
+++ b/index.html
@@ -48,19 +48,6 @@
 
       <div class="projects">
 
-        <div id="form-project">
-          <a href="https://luiswalderdorff.github.io/Techdegree-Project-3"  target="_blank">
-            <img  src="images/Project-3.png" alt="A form project I made." class="project-images"/>
-          </a>
-          <p><strong>Form Project</strong></p>
-          <p>
-            A simple online registration form I made with HTML and CSS.
-          </p>
-          <div class="arrows">
-            <a class="scroll" href="#gallery-project"><span class="arrow-bottom"></span></a>
-          </div>
-        </div>
-
         <div id="gallery-project">
           <a href="https://luiswalderdorff.github.io/Techdegree-Project-5"  target="_blank">
             <img  src="images/Project-5.png" alt="A picture gallery" class="project-images"/>
@@ -117,10 +104,24 @@
           <a href="https://full-stack-react-rest-api.herokuapp.com/"  target="_blank">
             <img  src="images/Full-Stack-Project.png" alt="A Full Stack School Database App with React and a REST API<" class="project-images"/>
           </a>
-          <p><strong>Full Stack School Database App with React and REST API</strong></p>
+          <p><strong>Full Stack School Database App with React and an Express REST API</strong></p>
           <p>
             An app in which you can sign up and create courses. Every account is only able to update and delete their own courses. The 
             REST-API was written in express and the front end was created with react. You can create an account and try it out yourself! You don't need to use a real email address when signing up, it just needs to look like an email address (CSS was provided). This web page uses cookies.
+          </p>
+          <div class="arrows">
+            <a class="scroll" href="#smart-brain-project"><span class="arrow-bottom"></span></a>
+          </div>
+        </div>
+
+        <div id="smart-brain-project">
+          <a href="https://smart-brain-luis.herokuapp.com/"  target="_blank">
+            <img  src="images/smart-brain.png" alt="A Full Stack School Database App with React and a REST API<" class="project-images"/>
+          </a>
+          <p><strong>Smart-Brain Facial Recognition App</strong></p>
+          <p>
+            A full-stack app which uses a facial recognition api to find a face in a picture and counts the times a user has used this feature.
+            Create an account (or login with the email jenny@gmail.com and the password 123) and add the link of a picture to use it. It uses React, Express and PosgreSQL.
           </p>
           <div class="arrows">
             <a class="scroll" href="#coming-soon"><span class="arrow-bottom"></span></a>
